objects/APTS_P_Values__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Considered_Factory_Minimum_Margin__c</fullName>
        <formula>APTS_Peer_Group__r.APTS_Factory__r.APTS_Minimum_Required_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Considered Factory Minimum Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Deactivation_Date__c</fullName>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Factory_BAL_ID__c</fullName>
        <formula>APTS_Peer_Group__r.APTS_Factory__r.APTS_BAL_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory BAL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_P10_OLD__c</fullName>
        <label>P10 [OLD]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P10__c</fullName>
        <label>P10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P20_OLD__c</fullName>
        <label>P20 [OLD]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P20__c</fullName>
        <label>P20</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P30_OLD__c</fullName>
        <label>P30 [OLD]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P30__c</fullName>
        <label>P30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_Avg_OLD__c</fullName>
        <label>P - Avg [OLD]</label>
        <picklist>
            <picklistValues>
                <fullName>P10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P90</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_P_Avg_Value__c</fullName>
        <formula>CASE(APTS_P_Avg__c, 
&apos;P10&apos;, APTS_P10__c, 
&apos;P20&apos;, APTS_P20__c, 
&apos;P30&apos;, APTS_P30__c, 
&apos;P40&apos;, APTS_P40__c, 
&apos;P50&apos;, APTS_P50__c, 
&apos;P60&apos;, APTS_P60__c, 
&apos;P70&apos;, APTS_P70__c, 
&apos;P80&apos;, APTS_P80__c, 
&apos;P90&apos;, APTS_P90__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Avg-Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_Avg__c</fullName>
        <label>P - Avg</label>
        <picklist>
            <picklistValues>
                <fullName>P10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P50</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>P60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_P_High_OLD__c</fullName>
        <label>P - High [OLD]</label>
        <picklist>
            <picklistValues>
                <fullName>P10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P90</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_P_High_Value__c</fullName>
        <formula>CASE(APTS_P_High__c, 
&apos;P10&apos;, APTS_P10__c, 
&apos;P20&apos;, APTS_P20__c, 
&apos;P30&apos;, APTS_P30__c, 
&apos;P40&apos;, APTS_P40__c, 
&apos;P50&apos;, APTS_P50__c, 
&apos;P60&apos;, APTS_P60__c, 
&apos;P70&apos;, APTS_P70__c, 
&apos;P80&apos;, APTS_P80__c, 
&apos;P90&apos;, APTS_P90__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-High-Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_High__c</fullName>
        <label>P - High</label>
        <picklist>
            <picklistValues>
                <fullName>P10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P90</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_P_Low_OLD__c</fullName>
        <label>P - Low [OLD]</label>
        <picklist>
            <picklistValues>
                <fullName>P10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P90</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_P_Low_Value__c</fullName>
        <formula>CASE(APTS_P_Low__c, 
&apos;P10&apos;, APTS_P10__c, 
&apos;P20&apos;, APTS_P20__c, 
&apos;P30&apos;, APTS_P30__c, 
&apos;P40&apos;, APTS_P40__c, 
&apos;P50&apos;, APTS_P50__c, 
&apos;P60&apos;, APTS_P60__c, 
&apos;P70&apos;, APTS_P70__c, 
&apos;P80&apos;, APTS_P80__c, 
&apos;P90&apos;, APTS_P90__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Low-Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_P_Low__c</fullName>
        <label>P - Low</label>
        <picklist>
            <picklistValues>
                <fullName>P10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>P20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Peer_Group_Name__c</fullName>
        <formula>APTS_Peer_Group__r.APTS_Peer_Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Peer_Group__c</fullName>
        <label>Peer Group</label>
        <referenceTo>APTS_Peer_Group__c</referenceTo>
        <relationshipLabel>P - Values</relationshipLabel>
        <relationshipName>P_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>P - Values</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>P - Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P - Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>APTS_P_AvgValue_Validation</fullName>
        <active>true</active>
        <description>P-Avg values should not be less than P-Low</description>
        <errorConditionFormula>OR(
ISPICKVAL(APTS_P_Low__c,&quot;&quot;),
ISPICKVAL(APTS_P_Avg__c,&quot;&quot;),
VALUE(Right(Text(APTS_P_Avg__c),LEN(Text(APTS_P_Avg__c))-1)) &lt;= VALUE(Right(Text(APTS_P_Low__c),LEN(Text(APTS_P_Low__c))-1)) 
)</errorConditionFormula>
        <errorMessage>P-Avg cannot be below P-Low</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_P_HighValue_Validation</fullName>
        <active>true</active>
        <description>P-High values should not be less than P-Avg</description>
        <errorConditionFormula>OR(ISPICKVAL(APTS_P_High__c,&quot;&quot;),
VALUE(Right(Text(APTS_P_High__c),LEN(Text(APTS_P_High__c))-1)) &lt;= VALUE(Right(Text(APTS_P_Avg__c),LEN(Text(APTS_P_Avg__c))-1)),
VALUE(Right(Text(APTS_P_High__c),LEN(Text(APTS_P_High__c))-1)) &lt;= VALUE(Right(Text(APTS_P_Low__c),LEN(Text(APTS_P_Low__c))-1)))</errorConditionFormula>
        <errorMessage>P-High cannot be below P-Low/P-Avg</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_P_Values_Validation</fullName>
        <active>true</active>
        <description>Validation of P Values</description>
        <errorConditionFormula>OR(
ISBLANK(APTS_P10__c),
ISBLANK(APTS_P20__c),
ISBLANK(APTS_P30__c),
ISBLANK(APTS_P40__c),
ISBLANK(APTS_P50__c),
ISBLANK(APTS_P60__c),
ISBLANK(APTS_P70__c),
ISBLANK(APTS_P80__c),
ISBLANK(APTS_P90__c),
APTS_P20__c &lt;  APTS_P10__c , 
APTS_P30__c &lt;  APTS_P20__c ,
APTS_P40__c &lt;  APTS_P30__c ,
APTS_P50__c &lt;  APTS_P40__c ,
APTS_P60__c &lt;  APTS_P50__c ,
APTS_P70__c &lt;  APTS_P60__c ,
APTS_P80__c &lt;  APTS_P70__c ,
APTS_P90__c &lt;  APTS_P80__c 
)</errorConditionFormula>
        <errorMessage>P-Values are not sequential.</errorMessage>
    </validationRules>
</CustomObject>